# viture-xr-night-sky-for-android

./: .gitignore  AGENT.md  README.md  settings.gradle
VITURE_XR_Glasses_SDK_for_Android/release/: LICENSE  NOTICE
VITURE_XR_Glasses_SDK_for_Android/release/include/: viture_device.h  viture_device_carina.h
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  viture_native_tracking.cpp
app/src/main/java/com/viture/nightsky/: MainActivity.kt
app/src/main/java/com/viture/nightsky/display/: NightSkyPresentation.kt
app/src/main/java/com/viture/nightsky/math/: Quaternion.kt
app/src/main/java/com/viture/nightsky/render/: MeshData.kt  NightSkyGLSurfaceView.kt  NightSkyRenderer.kt  SkyAssets.kt
app/src/main/java/com/viture/nightsky/scene/: NightSkySceneController.kt
app/src/main/java/com/viture/nightsky/tracking/: ArFloorTrackingManager.kt  FloorTrackingFrameSource.kt  NativeVitureBridge.kt  VitureTrackingManager.kt
app/src/main/java/com/viture/nightsky/util/: PanoramaRepository.kt
app/src/main/res/drawable/: control_bar_bg.xml  hud_panel_bg.xml  ic_settings_24.xml  settings_button_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
